Add more content, style wip

--- a/index.html
+++ b/index.html
@@ -3,45 +3,80 @@
     <head>
         <meta charset="UTF-8">
         <title>Awesome Website</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
         <div class="header">
             <div class="left">
-                header logo
+                Header logo
             </div>
             <div class="right">
                 <ul>
-                    <li>link one</li>
-                    <li>link two</li>
-                    <li>link three</li>
+                    <li>
+                        <a href="">
+                            link one
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            link two
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            link three
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
         
-        <div class="banner">
-            <h1>This website is awesome.</h1>
-            <p>This website has some text that goes here. It's smaller and a different color.
-            </p>
-            <button>Sign up</button>
-            and image will go here to the right of the text
-            <img src="" alt="" width="400">
+        <div class="hero">
+            <div class="left">
+                <h1>Basketball is awesome.</h1>
+                <p class="text">Look at the WNBA 2022 championship team! The Las Vegas Aces played awesome basketball.
+                    Get the latest news by signing up for the Awesome basketball newsletter.
+                </p>
+                <button>Sign up</button>
+            </div>
+
+            <div class="right">
+                <img src="./images/History-1.jpeg" alt="LV Aces player and coach hug in celebration">
+            </div>
         </div>
 
         <div class="info">
-            <h2>Some info</h2>
-            Four images across the page
+            <h2>Professional basketball team logos</h2>
+            <div class="logos-container">
+                <div>
+                    <img src="./images/aces-primary-logo.svg" alt="Las Vegas Aces logo">
+                </div>
+                <div>
+                    <img src="./images/chi-logo.svg" alt="Chicago Bulls logo">
+                </div>
+                <div>
+                    <img src="./images/sky-primary-logo.svg" alt="Chicago Sky logo">
+                </div>
+                <div>
+                    <img src="./images/cle-logo.svg" alt="Cleveland Cavaliers logo">
+                </div>
+            </div>
         </div>
 
         <div class="quote">
-            <p>This is an inspiring quote</p>
-            <p>- Thor, god of thunder</p>
+            <p>Really, first thing that you have to do in building a championship culture is to set a tone of accountability first and foremost</p>
+            <p>- Becky Hammon, LV Aces coach</p>
         </div>
 
         <div class="cta">
-            <h3>Call to action! It's time</h3>
-            <p>Sign up for our product.</p>
-            <button>Sign up</button>
+            <div class="left">
+                <h3>Call to action! It's time</h3>
+                <p class="text">Sign up for the latest basketball news.</p>
+            </div>
+            <div class="right">
+                <button>Sign up</button>
+            </div>
         </div>
 
         <div class="footer">
