--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
                 <ul>
                     <li>
                         <a href="">
-                            link one
+                            header link one
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            link two
+                            header link two
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            link three
+                            header link three
                         </a>
                     </li>
                 </ul>
@@ -35,8 +35,8 @@
         <div class="hero">
             <div class="left">
                 <h1>Basketball is awesome.</h1>
-                <p class="text">Look at the WNBA 2022 championship team! The Las Vegas Aces played awesome basketball.
-                    Get the latest news by signing up for the Awesome basketball newsletter.
+                <p class="text">
+                    Look at the WNBA 2022 championship team! The Las Vegas Aces played awesome basketball.
                 </p>
                 <button>Sign up</button>
             </div>
@@ -49,38 +49,44 @@
         <div class="info">
             <h2>Professional basketball team logos</h2>
             <div class="logos-container">
-                <div>
+                <div class="logo-item">
                     <img src="./images/aces-primary-logo.svg" alt="Las Vegas Aces logo">
+                    <p>Soem text about this logo and its centered</p>
                 </div>
-                <div>
+                <div class="logo-item">
                     <img src="./images/chi-logo.svg" alt="Chicago Bulls logo">
+                    <p>Soem text about this chicago logo loogo and its centered</p>
                 </div>
-                <div>
+                <div class="logo-item">
                     <img src="./images/sky-primary-logo.svg" alt="Chicago Sky logo">
+                    <p>Soem text about this chicago logo and its centered</p>
                 </div>
-                <div>
+                <div class="logo-item">
                     <img src="./images/cle-logo.svg" alt="Cleveland Cavaliers logo">
+                    <p>Soem text about this clevland logo and its centered</p>
                 </div>
             </div>
         </div>
 
         <div class="quote">
-            <p>Really, first thing that you have to do in building a championship culture is to set a tone of accountability first and foremost</p>
-            <p>- Becky Hammon, LV Aces coach</p>
+            <p class="text">Really, first thing that you have to do in building a championship culture is to set a tone of accountability first and foremost.</p>
+            <p class="quote-id">- Becky Hammon, LV Aces coach</p>
         </div>
 
         <div class="cta">
-            <div class="left">
-                <h3>Call to action! It's time</h3>
-                <p class="text">Sign up for the latest basketball news.</p>
-            </div>
-            <div class="right">
-                <button>Sign up</button>
+            <div class="cta-container">
+                <div class="left">
+                    <h3>Don't miss the latest scores and stats! It's time!</h3>
+                    <p class="text">Sign up for the latest basketball news.</p>
+                </div>
+                <div class="right">
+                    <button>Sign up</button>
+                </div>
             </div>
         </div>
 
         <div class="footer">
-            <p>Copyright TODO: add copyright symbol The Odin Project 2022</p>
+            <p>Copyright &copy; The Odin Project 2022</p>
         </div>
     </body>
 </html>
